	* Disallow the direct physical attacking of bsuits as per FASA.
	  Maxtech has damage absorption rules for attacking the swarmed unit
	  but hitting the suit, these should be used instead. (Greg)
	* Added the mech 'trip' physical as per Maxtech. Same as kicking as
	  far as BTH and actuators go except no damage is dealt and a failed
	  roll by the attacker doesn't cause a fall.

	- Merge
	* Added Exile's roll on back walk code. (Tuncay)
	* Added Exile's mine trigger stuff which seperates the
	  Trigger mine and makes it more usable. (Dany)
	* Added Exile's emits (to MechDebugInfo) for picking up
	  and dropping off units. (Dany)
	* Added Exile's Waterproof_Tech but it works on all units
	  except for aeros, vtols and DSes.  Basicly negates any
	  rolls or affects that water has on a unit although
	  the units will still slow down in water. (Dany)
	* Added Coolant Guns. (Dany)
	* Added 'vector' command. (Power_Shaper)
	* Changed tacheight to tacsize. (Dany)
	* Added Exile's head hit stun code.  Can be turned on/off using the
	  mudconf parameter 'btech_exile_stun_code'. (Dany)
	* Finished hooking Maneuvering Ace to turnmodes. (Power_Shaper)
        * Added Exile's Observer channel code with coloring. (Power_Shaper)
        * Added btech_idf_requies_spotter defaulting to 1 for
          idf Spotting requirements. (Power_Shaper)
	* Ported Exile style orbital dropping. (Greg)

	- Bugfixes
	* Fixed mistiming in weapon recycling code. (Martin Murray)
	* Can no longer hide while OOD'ing (Greg Taylor)
	* Fixed btsetcharvalue() and btgetcharvalue() crashers.
	  (Martin Murray)
	* Some fixes for the mux to compile on Linux/amd64,
	  still a bunch of 32/64 bit issues. (Martin Murray)
	* Changed notify_check to notify_checked, was conflicting 
	  with a builtin function on Mac OS X. (Dany)
	* Fixes for embark and udisembark. (Dany)
	* Fixes to the configure system. (Dany)
	* btsetpartcost() corrected negative cost error check. (George Ponick)