@@ -21,6 +21,7 @@
 #define PA_SWORD 5
 #define PA_MACE  6
 #define PA_TRIP  7
+#define PA_SAW   8
 
 #define P_LEFT  1
 #define P_RIGHT 2
